scss/app.scss
@import "css3";

$nav_width: 265px;
$footer_height: 230px;
$hover_color: #D6E9F8; // #DDD;
$selected_color: #E5ECF9;
$header_height: 46px;
$header_color: #3D5877;
$body_width: 1250px;

::-webkit-scrollbar {
    width: 9px;
    height: 8px;
}

::-webkit-scrollbar-track {
    /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6); */
    background: #ECECEC;
    /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
    /* background: #cecece; */
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    /* background: #eeeeee; */
    /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); */
    background: white;
    border-radius: 10px;
    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
}

::-webkit-scrollbar-thumb:vertical:hover {
    background: #fafafa;
}

img { border: 0; }
a { outline: 0; text-decoration: none;}

.clearfix:before, .clearfix:after { content: ""; display: table; }
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }

#header {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    background: $header_color;
    height: $header_height;
    width: 100%;
    .wrapper {
        width: $body_width;
        margin: 0 auto;
        position: relative;
        > * { position: absolute; }
    }
    h1 {
        left: 10px; top: 3px; margin: 3px 0; font-size: 26px;
        a { color: white; }
    }
    input {
        left: 230px;
        font-size: 14px;
        padding: 2px 4px;
        width: 300px;
        height: 32px;
        margin-top: 6px;
        @include border-radius(5px);
    }
    ul.nav {
        font-size: 12px;
        right: 20px;
        top: 13px;
        li {
            display: inline-block;
            padding: 2px;
            &:hover { text-decoration: underline; }
        }
        a { color: white; }
    }
}

#main {
    margin-top: $header_height;
    background: white;
    /* background: #F6F6F6 url('/imgs/bg.png') repeat center top; */
    /* background: #F6F6F6 url('/imgs/background.png') repeat center top; */
    position: relative;
    .hover-switch {
        position: absolute;
        background: $header_color;
        width: 18px;
        height: 55px;
        top: 45%;
        left: 0;
        cursor: pointer;
        @include border-radius(0 10px 10px 0);
    }

/* border-left: 1px solid #C5CACE; */
}

html, body {
    width: $body_width;
    height: 100%;
    margin: 0 auto;
    padding: 0;
    overflow: hidden;
}

body {
    font: 400 14px/1.431 "Helvetica Neue","Microsoft YaHei",Helvetica,Arial,sans-serif;
    color: #111;
    background: #F6F6F6 url('/imgs/background.png') repeat center top;
/* background: #F6F6F6 url('/imgs/bg.png') repeat center top; */
}

#content { margin-left: $nav_width; }

#navigation {
    float: left;
    height: 100%;
    width: $nav_width;
    font-size: 13px;
    overflow-x: hidden;
    overflow-y: scroll;
}

#feed-list {                    /* navigation */
    width: $nav_width;
    overflow: auto;
    li {
        border-bottom: 1px dotted #eee;
        padding: 4px;
    }
    .selected { background: $selected_color; }
}

ul { list-style: none; padding: 0; margin: 0; }

#sub-list {                     /* in navigation */
    li.collapse  > ul { display: none; }
    .folder, .item {
        cursor: pointer;
        &.selected { background: $selected_color; }
        &:hover { background: $hover_color; }
    }
    .item {
        padding-left: 2em;
        position: relative;
        a { display: block; padding: 5px 0 3px 0; }
        img { left: 2em; }
    }
    img { position: absolute; top: 6px; }
    .folder {
        position: relative;
        span { padding: 7px 0 0 22px; display: inline-block; }
        img { left: 3px; }
    }
    .title {
        @include overflow-ellipsis();
        padding-left: 20px;
        max-width: 240px;
    }
}

.indicator {
    margin: 4px;
    position: absolute;
    top: 4px;
    height: 7px;
    width: 7px;
    @include border-radius(8px);
}

/* by sys, virtual small than by user */
.sys .indicator {
    height: 5px;
    width: 5px;
    top: 5px;
}

.unread-like { background-color: #449d4e; color: #ffffff; }
.unread-neutral { background-color: #f5d85f; color: #303030; }
.unread-dislike { background-color: #c28561; color: #ffffff; }
.total { background: #999; color: white; }

.feed {
    .vote { margin: 0 0 0 12px; }
    &.like {
        .indicator { background: #449d4e; }
        &:hover .vote span.up { visibility: visible; }
    }
    &.neutral {
        .indicator { background: #f5d85f; }
        &:hover .vote span { visibility: visible; }
    }
    &.dislike {
        .indicator { background: #c28561; }
        &:hover .vote span.down { visibility: visible; }
    }
}

.feeds .feed.sys {
    &.dislike, &.like {
        &:hover .vote span { visibility: visible; }
    }
}

.unread a { color: #00E; }
.read, .sys-read { a { color: #444; } }

#reading-area {
    overflow: hidden;
    div.feed { padding: 3px 4px; }
    &.show-iframe {
        .welcome-list { display: none; }
        .iframe { display: block; }
    }
    .iframe {
        position: relative;
        display: none; height: 100%;
    }
}

.count {
    position: absolute;
    right: 2px;
    top: 7px;
    font-size: 11px;
    span {
        padding: 5px 2px 1px 2px;
        @include border-radius(2px);
    }
}

.welcome-list {
    overflow-y: auto;
    height: 100%;
    margin: 3px 2px 2px 25px;
    h2 { text-align: center; }
    .feed { border: 2px solid rgba(0,0,0,0);}
    .feeds {
        .title {
            max-width: 75%;
            @include overflow-ellipsis();
        }
        .date { right: 1em;}
        margin: 3px 5px;
        width: $body_width - $nav_width - 150px;
    }
    .sort {
        $border_color: #777;
        border-bottom: 1px solid $border_color;
        font-weight: bold;
        position: relative;
        height: 29px;
        ul {
            padding: 0; margin: 0; text-align: right;
            position: absolute;
            bottom: 3px;
            right: 110px;
        }
        li {
            display: inline-block;
            a {
                border: 1px solid white;
                color: #777;
                margin-right: 8px;
                padding: 3px 11px 4px 11px;
                &:hover {
                    border: 1px solid $border_color;
                    padding-bottom: 5px;
                    border-bottom-color: white;
                }
                &.selected {
                    border: 1px solid $border_color;
                    border-bottom-color: white;
                    color: black;
                    font-size: 15px;
                    padding: 5px 11px 5px 11px;
                }
            }
        }
    }
    .pager {
        li {
            &.current {
                background: #ccc;
                font-weight: bold;
            }
            float: left;
            background: #ECECEC;
            display: inline-block;
            @include border-radius(4px);
            &:hover { background: #ccc; }
            margin-left: 6px;
            text-align: center;
            a {
                display: block;
                padding: 0px 9px;
            }
        }
    }
}

.feeds {                        /* share by welcome-list and feed-list */
    .title { margin-left: 17px; }
    > li {
        a { display: block; }
        position: relative;
        padding: 2px 3px;
        &.selected, &:hover { background: $hover_color; }
        .date {
            position: absolute;
            color: #777;
            top: 7px;
            right: 2em;
        }
    }
}

span.vote {
    position: absolute;
    span {
        display: inline-block;
        visibility: hidden;
        cursor: pointer;
        width: 18px;
        height: 18px;
        background: url(/imgs/vote.gif);
    }
    .down { background-position: -18px 0; }
}

.author {
    font-size: 10px;
    margin-left: 10px;
    color: #444;
    display: inline-block;
    background: #f2f2f2;
    padding: 1px 2px;
}

.date { font-size: 11px; }

.tags {
    font-size: 10px;
    display: none;
    li {
        background: #e7e7e7;
        display: inline-block;
        padding: 1px 2px;
        @include border-radius(3px);
    }
}

iframe {
    width: 100%;
    height: 100%;
    border: 0;
    margin: 0 !important;
    padding: 0 !important;
    overflow: auto !important;
    display: block;
    border-image: initial;
}

#search-result {
    a { padding: 3px 7px; display: block; }
    .tags { display: inline-block; }
    .feed { padding: 1px 3px;}
    .title {
        display: inline-block;
        max-width: 500px;
        @include overflow-ellipsis();
    }
    .indicator {
        top: 5px;
        height: 7px;
        width: 7px;
        left: 4px;
    }
    .subs li {
        position: relative;
        &.selected, &:hover { background: $hover_color; }
    }
    .count { top: 9px; right: 7px; }
    img { margin-top: 3px; }
    .feeds { .title { margin-left: 12px; } }
    .date { top: 26px; right: 7px; }
    .author { margin: 0; }
    .meta {
        font-size: 11px;
        padding-left: 12px;
        color: #666;
        width: 440px;
        @include overflow-ellipsis();
    }
    box-shadow: 0 1px 4px rgba(0, 0, 0, .5);
    position: absolute;
    width: 540px;
    top: 38px;
    left: 230px;
    background: white;
    @include border-radius(0 0 5px 5px);
}

#footer {
    position: absolute;
    bottom: 0;
    background: rgba(3, 3, 3, 0.53);
    width: 100%;
    height: 27px;
    padding: 4px 0 0 0;
    a {
        max-width: 670px;
        display: inline-block;
        font-weight: bold;
        color: white;
        @include overflow-ellipsis();
        &:hover { text-decoration: underline; }
    }
    img {
        position: absolute;
        width: 25px;
        height: 25px;
        right: 24px;
        top: 6px;
    }
    .like .vote span.up { visibility: visible; }
    .dislike .vote span.down { visibility: visible; }
    .neutral, .sys { span { visibility: visible; } }
    span.domain { color: white; padding: 0 1.3em 0 2em ; font-size: small;}
    .indicator {
        top: 7px; right: 65px;
        height: 12px;
        width: 12px;
        @include border-radius(6px);
    }
    .sys .indicator {
        height: 9px;
        width: 9px;
        top: 7px;
        @include border-radius(5px);
    }
    .vote {
        right: 85px;
        span { display: inline-block; }
    }
}

@import "misc.scss"

